# home-sh

./: .cursorignore  .envrc  .gitattributes  .gitignore  .gitmodules  .npmrc  .sops.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  biome.json  justfile  lefthook.yml  lock.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci-dev.yml  ci.yml  dependabot-auto-merge.yml  deploy.yml  destroy-legacy-data-stores.yml  infra-plan.yml  lint-workflows.yml  push-worker-secrets.yml  reusable-verify.yml  rollback.yml  token-expiry-check.yml
apps/site/: .env.example  _headers  astro.config.mjs  package.json  panda.config.ts  svelte.config.js  (+6 more)
apps/wasm/canvas/: Cargo.toml
apps/wasm/canvas/src/: lib.rs
content/: resume.generated.json  resume.snapshot.json  resume.toml  site.toml
infra/: ACCESS_WORKERS.md  README.md  STAGING_PREVIEW_ACCESS.md
scripts/: agent-env.mjs  agent-test.sh  cf-list-access-apps.ts  ci-pipeline.sh  copy-gh-environment.ts  destroy-legacy-data-stores.ts  ensure-sh-lf.mjs  extract-splash-draft-css.ts  generate-resume-pdf.ts  gh-protect-dev.sh  gh-protect-main.sh  no-work-identity.sh  push-secrets.ts  qa.sh  refresh-site-env.sh  refresh-worker-env.sh  ruleset-protect-dev.json  ruleset-protect-main-no-ci-check.json  ruleset-protect-main.json  sync-resume.ts  verify-with-progress.sh  wsl-proxy.mjs  wsl-repair-shell.sh  wsl-run.ps1  wsl-run.sh  wsl-setup.sh  wsl-shell-snippet.sh
(+364 files in other folders)
