[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
js-sys = "0.3"
lyon = "1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasGradient",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "Window",
]
